Adding menu section to menu.html

--- a/menu.html
+++ b/menu.html
@@ -110,7 +110,97 @@
     </section>
 <!-- ----------------------------------------------------------------------------------------------------------------------------------------------------- -->
 
+<section>
+<div class="our-menu-container">
+    <div class="our-menu-content">
+        <div class="our-menu-content-division">
+            <div class="our-menu-text-container">
+                <h1>Our Menu</h1>
+                <p>We consider all the drivers of change gives you the components you need to change to create a truly happens.</p>
+            </div>
 
+            <div class="our-menu-buttons-container">
+                <ul>
+                    <li><button class="button-all">All</button></li>
+                    <li><button class="button-bfast">Breakfast</button></li>
+                    <li><button class="button-mdish">Main Dishes</button></li>
+                    <li><button class="button-drinks">Drinks</button></li>
+                    <li><button class="button-dessert">Desserts</button></li>
+                </ul>
+            </div>
+        </div>
+        <div class="our-menu-cards-container">
+            <div class="card1 menu-card">
+                <img class="img-card" src="./img/eggs.png" alt="Fried Eggs">
+                <div class="card-text">
+                    <h3>$ 9.99</h3>
+                    <h4>Fried Eggs</h4>
+                    <p>Made with eggs, lettuce, salt, oil and other ingredients.</p>
+                </div>
+            </div>
+            <div class="card2 menu-card">
+                <img class="img-card" src="./img/pizza-card.png" alt="Hawaiian Pizza">
+                <div class="card-text">
+                    <h3>$ 15.99</h3>
+                    <h4>Hawaiian Pizza</h4>
+                    <p>Made with eggs, lettuce, salt, oil and other ingredients.</p>
+                </div>
+            </div>
+            <div class="card3 menu-card">
+                <img class="img-card" src="./img/coctail-card.png" alt="Cocktail">
+                <div class="card-text">
+                    <h3>$ 7.25</h3>
+                    <h4>Martinez Cocktail</h4>
+                    <p>Made with eggs, lettuce, salt, oil and other ingredients.</p>
+                </div>
+            </div>
+            <div class="card4 menu-card">
+                <img class="img-card" src="./img/butter-card.png" alt="Butterscotch Cake">
+                <div class="card-text">
+                    <h3>$ 20.99</h3>
+                    <h4>Butterscotch Cake</h4>
+                    <p>Made with eggs, lettuce, salt, oil and other ingredients.</p>
+                </div>
+            </div>
+            <div class="card5 menu-card">
+                <img class="img-card" src="./img/mint-card.png" alt="Mint Lemonade">
+                <div class="card-text">
+                    <h3>$ 5.89</h3>
+                    <h4>Mint Lemonade</h4>
+                    <p>Made with eggs, lettuce, salt, oil and other ingredients.</p>
+                </div>
+            </div>
+            <div class="card6 menu-card">
+                <img class="img-card" src="./img/chocolate-card.png" alt="Chocolate Icecream">
+                <div class="card-text">
+                    <h3>$ 18.05</h3>
+                    <h4>Chocolate Icecream</h4>
+                    <p>Made with eggs, lettuce, salt, oil and other ingredients.</p>
+                </div>
+            </div>
+            <div class="card7 menu-card">
+                <img class="img-card" src="./img/cheese-card.png" alt="Cheese Burger">
+                <div class="card-text">
+                    <h3>$ 12.55</h3>
+                    <h4>Cheese Burger</h4>
+                    <p>Made with eggs, lettuce, salt, oil and other ingredients.</p>
+                </div>
+            </div>
+            <div class="card8 menu-card">
+                <img class="img-card" src="./img/pan-card.png" alt="Classic Waffles">
+                <div class="card-text">
+                    <h3>$ 12.99</h3>
+                    <h4>Classic Waffles</h4>
+                    <p>Made with eggs, lettuce, salt, oil and other ingredients.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+  
+</section>
 
 
 
